--- a/templates/contact.html
+++ b/templates/contact.html
@@ -159,7 +159,7 @@
     <div class="container-fluid">
         <div class="contact-page-map-outer">
             <!--Map Canvas-->
-            <h1 style="text-align: center;">Yo'nalish Olish Uchun <a href="https://maps.app.goo.gl/yxEUmxrG5BYuCBgXA">Shuni</a>Ustiga Bosing</h1>
+            <h1 style="text-align: center;">{% trans "Yo'nalish Olish Uchun"%} <a href="https://maps.app.goo.gl/yxEUmxrG5BYuCBgXA">{% trans "Shuni"%}</a>{% trans "Ustiga Bosing"%}</h1>
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2670.6152738880974!2d72.33038402193579!3d40.96841857503332!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2s!4v1722999789978!5m2!1sen!2s" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
